--- a/0_DSWx-SAR-Workflow.ipynb
+++ b/0_DSWx-SAR-Workflow.ipynb
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "34798675-c400-423c-a23f-602a8f24b9db",
    "metadata": {},
    "outputs": [
@@ -1715,6 +1715,102 @@
      "text": [
       "/Users/cmarshak/mambaforge/envs/dswx_val/lib/python3.11/site-packages/dswx_sar/refine_with_bimodality.py:150: RuntimeWarning: divide by zero encountered in divide\n",
       "  return amplitude * np.exp(-(array - mu)**2 / 2 / sigma ** 2)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " -- Reading /Users/cmarshak/bekaert-team/dswx-sar-workflow-pst/out/S1B_IW_SLC__1SDV_20211212T002818_20211212T002836_029985_03946A_6D2A/scratch/no_data_area_VV_VH.tif ... (6146, 9238)\n",
+      "100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...Saving dswx product : /Users/cmarshak/bekaert-team/dswx-sar-workflow-pst/out/S1B_IW_SLC__1SDV_20211212T002818_20211212T002836_029985_03946A_6D2A/scratch/bimodality_output_binary_VV_VH.tif \n",
+      "100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...>> lee_enhanced_filter\n",
+      " -- Reading /Users/cmarshak/bekaert-team/dswx-sar-workflow-pst/out/S1B_IW_SLC__1SDV_20211212T002818_20211212T002836_029985_03946A_6D2A/scratch/interpolated_landcover ... (6146, 9238)\n",
+      " -- Reading /Users/cmarshak/bekaert-team/dswx-sar-workflow-pst/out/S1B_IW_SLC__1SDV_20211212T002818_20211212T002836_029985_03946A_6D2A/scratch/interpolated_landcover ... (6146, 9238)\n",
+      "/Users/cmarshak/bekaert-team/dswx-sar-workflow-pst/out/S1B_IW_SLC__1SDV_20211212T002818_20211212T002836_029985_03946A_6D2A/scratch/temp_inundated_vegetation.tif (6146, 9238)\n",
+      "Saving dswx product : /Users/cmarshak/bekaert-team/dswx-sar-workflow-pst/out/S1B_IW_SLC__1SDV_20211212T002818_20211212T002836_029985_03946A_6D2A/scratch/temp_inundated_vegetation.tif \n",
+      "100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90..."
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: product version was not provided.\n",
+      "WARNING: Either the MGRS tile or the MGRS collection database was not provided.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " -- Reading /Users/cmarshak/bekaert-team/dswx-sar-workflow-pst/out/S1B_IW_SLC__1SDV_20211212T002818_20211212T002836_029985_03946A_6D2A/scratch/bimodality_output_binary_VV_VH.tif ... (6146, 9238)\n",
+      " -- Reading /Users/cmarshak/bekaert-team/dswx-sar-workflow-pst/out/S1B_IW_SLC__1SDV_20211212T002818_20211212T002836_029985_03946A_6D2A/scratch/no_data_area_VV_VH.tif ... (6146, 9238)\n",
+      " -- Reading /Users/cmarshak/bekaert-team/dswx-sar-workflow-pst/out/S1B_IW_SLC__1SDV_20211212T002818_20211212T002836_029985_03946A_6D2A/scratch/mosaic_layovershadow_mask.tif ... (6146, 9238)\n",
+      " -- Reading /Users/cmarshak/bekaert-team/dswx-sar-workflow-pst/out/S1B_IW_SLC__1SDV_20211212T002818_20211212T002836_029985_03946A_6D2A/scratch/interpolated_hand ... (6146, 9238)\n",
+      " -- Reading /Users/cmarshak/bekaert-team/dswx-sar-workflow-pst/out/S1B_IW_SLC__1SDV_20211212T002818_20211212T002836_029985_03946A_6D2A/scratch/temp_inundated_vegetation.tif ... (6146, 9238)\n",
+      " -- Reading /Users/cmarshak/bekaert-team/dswx-sar-workflow-pst/out/S1B_IW_SLC__1SDV_20211212T002818_20211212T002836_029985_03946A_6D2A/scratch/region_growing_output_binary_VV_VH.tif ... (6146, 9238)\n",
+      " -- Reading /Users/cmarshak/bekaert-team/dswx-sar-workflow-pst/out/S1B_IW_SLC__1SDV_20211212T002818_20211212T002836_029985_03946A_6D2A/scratch/refine_landcover_binary_VV_VH.tif ... (6146, 9238)\n",
+      "Saving dswx product : /Users/cmarshak/bekaert-team/dswx-sar-workflow-pst/out/S1B_IW_SLC__1SDV_20211212T002818_20211212T002836_029985_03946A_6D2A/scratch/full_water_binary_WTR_set.tif \n",
+      "    bright_water_fill found 2\n",
+      "    dark_land_mask found 3\n",
+      "    landcover_mask found 4\n",
+      "    hand_mask found 5\n",
+      "    layover_shadow_mask found 6\n",
+      "    inundated_vegetation found 7\n",
+      "    no_data found 120\n",
+      "100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...Saving dswx product : /Users/cmarshak/bekaert-team/dswx-sar-workflow-pst/out/S1B_IW_SLC__1SDV_20211212T002818_20211212T002836_029985_03946A_6D2A/scratch/full_water_binary_BWTR_set.tif \n",
+      "    hand_mask found 5\n",
+      "    layover_shadow_mask found 6\n",
+      "    inundated_vegetation found 7\n",
+      "    no_data found 120\n",
+      "100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90... -- Reading /Users/cmarshak/bekaert-team/dswx-sar-workflow-pst/out/S1B_IW_SLC__1SDV_20211212T002818_20211212T002836_029985_03946A_6D2A/scratch/fuzzy_image_VV_VH.tif ... (6146, 9238)\n",
+      "Saving dswx product : /Users/cmarshak/bekaert-team/dswx-sar-workflow-pst/out/S1B_IW_SLC__1SDV_20211212T002818_20211212T002836_029985_03946A_6D2A/scratch/full_water_binary_CONF_set.tif \n",
+      "    no_data found 120\n",
+      "    hand_mask found 252\n",
+      "    layover_shadow_mask found 253\n",
+      "100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10...20...30...40...50...60...70...80...90..."
      ]
     }
    ],
