--- a/1_Visualization.ipynb
+++ b/1_Visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "id": "f8d21d6d-13c3-409e-b16c-e4ed65de1ee1",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "id": "e912eb92-f2fb-49ba-a922-7091998cffed",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "id": "b9945213-7189-4fff-9ac2-91260af70682",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
        "True"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "id": "57dee47b-65e6-4f28-a21e-5a7da675ff34",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
        "  PosixPath('out/S1B_IW_SLC__1SDV_20211212T002818_20211212T002836_029985_03946A_6D2A/sas/OPERA_L3_DSWx-S1_T14SMF_20211212T002820Z_20231018T115050Z_S1B_30_vNone_B02_WTR.tif')])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "id": "c18555f0-209b-4c89-b852-cf066911a0f3",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
        " CRS.from_epsg(32614)]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "id": "abe3332a-5c96-41af-8776-74dbc63f5288",
    "metadata": {},
    "outputs": [],
@@ -123,19 +123,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "06c13947-3b81-4024-b684-2749bf19b7c8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Source: https://stackoverflow.com/a/1518632\n",
     "def most_common_item(lst):\n",
-    "    return max(set(lst), key="
+    "    return max(set(lst), key=lst.count)\n",
+    "prevalent_crs = most_common_item(crs_wtrs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "id": "097e7d9b-dcfb-4083-b504-63a865d6893d",
    "metadata": {},
    "outputs": [
@@ -145,19 +146,19 @@
        "10"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "wtr_prod_paths_f = [p for p in wtr_prod_paths if get_crs(p) == CRS.from_epsg(32614)] \n",
+    "wtr_prod_paths_f = [p for p in wtr_prod_paths if get_crs(p) == prevalent_crs] \n",
     "len(wtr_prod_paths_f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "id": "21a880f6-81d9-4a4f-aaf7-78f93b090d97",
    "metadata": {},
    "outputs": [],
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "id": "9340cea2-f501-4271-aa86-c12dd3f02546",
    "metadata": {},
    "outputs": [],
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "id": "6bb1e3ca-e8f2-44fa-a782-e3a80f017cc6",
    "metadata": {},
    "outputs": [
@@ -197,7 +198,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
