fix tile_mate name

--- a/1_DSWx-SAR-Workflow-Using-SLC-ID.ipynb
+++ b/1_DSWx-SAR-Workflow-Using-SLC-ID.ipynb
@@ -45,7 +45,7 @@
     "from pathlib import Path\n",
     "from dem_stitcher import stitch_dem\n",
     "from hand import compute_hand\n",
-    "from tile_stitcher import get_raster_from_tiles\n",
+    "from tile_mate import get_raster_from_tiles\n",
     "from download_rtc import get_search_client, get_rtc_urls, download_rtc_products, get_burst_df\n",
     "from dataclasses import dataclass\n",
     "import yaml\n",
